<resources>
    <string name="app_name">My Food</string>
    <string name="splash_screen">Splash Screen</string>
    <string name="get_started">Get Started</string>
    <string name="splash_screen_subtitle"> Your healthy lifestyle partner where your healthy recipe needs are taken care of</string>
    <string name="user_details_form_title">We\'re glad to be part of your journey</string>
    <string name="user_details_form_subtitle">To begin, kindly provide the details below</string>
    <string name="name">Your name</string>
    <string name="select_health">Select health</string>
    <string name="low_carb">Low Carb</string>
    <string name="balanced">Balanced</string>
    <string name="high_fiber">High Fiber</string>
    <string name="high_protein">High Protein</string>
    <string name="low_fat">Low Fat</string>
    <string name="low_sodium">Low Sodium</string>
    <string name="select_preference">Select categories</string>
    <string name="glutten_free">Gluten Free</string>
    <string name="peanut_free">Peanut Free</string>
    <string name="wheat_free">Wheat Free</string>
    <string name="dairy_free">Dairy Free</string>
    <string name="alcohol_free">Alcohol Free</string>
    <string name="celery_free">Celery Free</string>
    <string name="crustacean_free">Crustacean Free</string>
    <string name="egg_free">Egg Free</string>
    <string name="fish_free">Fish Free</string>
    <string name="fodmap_free">Fodmap Free</string>
    <string name="gluten_free">Gluten Free</string>
    <string name="immuno_supportive">Immuno Supportive</string>
    <string name="kidney_friendly">Kidney Friendly</string>
    <string name="kosher">Kosher</string>
    <string name="low_fat_abs">Low fat abs</string>
    <string name="low_potassium">Low potassium</string>
    <string name="low_sugar">Log sugar</string>
    <string name="lupine_free">Lupine Free</string>
    <string name="mustard_free">Mustard Free</string>
    <string name="no_oil_added">No oil added</string>
    <string name="paleo">Paleo</string>
    <string name="pescatarian">Pescatarian</string>
    <string name="sesame_free">Sesame Free</string>
    <string name="shellfish_free">Shellfish Free</string>
    <string name="soy_free">Soy Free</string>
    <string name="sugar_conscious">Sugar conscious</string>
    <string name="tree_nut_free">Tree nut Free</string>
    <string name="next">Next</string>
    <string name="welcome">Welcome %1$s,</string>
    <string name="meal_inquiry">What would you like to eat today?</string>
    <string name="category_label">Category label</string>
    <string name="parser">Parser</string>
    <string name="content_desc_category">Category image</string>
    <string name="food_label">Food label</string>
    <string name="content_desc_recipe_image">Recipe image</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="brunch">Brunch</string>
    <string name="teatime">Teatime</string>
    <string name="snack">Snack</string>
    <string name="toast_required_input">All form inputs are required</string>
    <string name="toast_correct_name_input">Name should have atleast four alphabetical characters</string>
    <string name="keto_friendly">Keto Friendly</string>
    <string name="vegan">Vegan</string>
    <string name="pork_free">Pork Free</string>
    <string name="red_meat_free">Red Meat Free</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="sulfite_free">Sulfite Free</string>
    <string name="generic_foods">Generic Foods</string>
    <string name="generic_meals">Generic Meals</string>
    <string name="packaged_foods">Packaged Foods</string>
    <string name="fast_foods">Fast Foods</string>
    <string name="search">Search</string>
    <string name="calorie">Calorie</string>
    <string name="protein">Protein</string>
    <string name="carbohydrate">Carbohydrate</string>
    <string name="fat">Fat</string>
    <string name="home">Home</string>
    <string name="content_desc_meal_type_screen">Meal types screen</string>
    <string name="error">Error</string>
    <string name="failure_feedback">Something went wrong. Please check your Internet connection and try again later</string>
    <string name="unsuccessful_feedback">Something went wrong. Please try again later</string>
    <string name="no_foods_found">Sorry, no foods found</string>
    <string name="search_foods">Search for foods</string>
    <string name="calories">Calories</string>
    <string name="quantity">Quantity</string>
    <string name="serving">Serving</string>
    <string name="ingredient_label">Ingredient label</string>
    <string name="ingredient_quantity">Ingredient quantity</string>
    <string name="cholesterol">Cholesterol</string>
    <string name="sodium">Sodium</string>
    <string name="calcium">Calcium</string>
    <string name="magnesium">Magnesium</string>
    <string name="potassium">Potassium</string>
    <string name="iron">Iron</string>
    <string name="measures">Measures</string>
    <string name="diet_health_labels">Diet &amp; Health Labels</string>
    <string name="nutritional_info">Nutritional information</string>
    <string name="no_saved_recipes">No saved recipes found</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="login">Login</string>
    <string name="login_account">Login to your account</string>
    <string name="login_additional_text">Kindly enter your details below to login into your account</string>
    <string name="proceed_to_signup">Don\'t have an account?Sign up here</string>
    <string name="getting_started">Getting Started</string>
    <string name="signup_additional_text">Create an account to continue</string>
    <string name="confirm_password">Confirm password</string>
    <string name="proceed_to_login">Already have an account? Login here</string>
    <string name="required_valid_email_error">Please enter a valid email address</string>
    <string name="required_confirm_password_error">Confirm password should match password</string>
    <string name="required_valid_password_error">Password should have at least 8 characters with uppercase, lowercase, digits and special characters</string>
    <string name="failed_registration">Registration failed</string>
    <string name="verification_prompt">Email verification sent</string>
    <string name="successful_authentication">Authentication successful</string>
    <string name="failed_authentication">Authentication failed</string>
    <string name="email_verification_prompt">Please verify your email before proceeding</string>
    <string name="saved">Saved</string>
    <string name="removed">Removed</string>
    <string name="save_favorite">Save favorite</string>
    <string name="remove_favorite">Remove favorite</string>
    <string name="logout">Logout</string>
    <string name="progress_dialog_message">Loading…</string>
    <string name="progress_dialog_message_login">Authenticating …</string>
    <string name="progress_dialog_message_signup">Signing up …</string>
    <string name="content_desc_drag">Icon to reorder recipe list</string>
    <string name="not_saved">Something went wrong</string>
</resources>