<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">

    <com.google.android.material.card.MaterialCardView
        style="@style/CardViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="154dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/recipe_image_view"
                style="@style/RoundCornersImageStyle"
                android:layout_width="@dimen/recipe_list_image_width"
                android:layout_height="@dimen/recipe_list_image_height"
                android:layout_marginStart="@dimen/view_margin_horizontal_double"
                android:layout_marginTop="@dimen/view_margin_vertical_double"
                android:layout_marginEnd="@dimen/view_margin_horizontal_double"
                android:background="@color/foods_white"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/RoundCornersImageStyle"
                tools:srcCompat="@drawable/breakfast" />

            <View
                android:id="@+id/divider"
                android:layout_width="@dimen/divider_width"
                android:layout_height="@dimen/divider_height"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="@dimen/view_margin_vertical_double"
                android:background="?attr/colorPrimary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recipe_image_view" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="@fraction/guideline_percent" />

            <TextView
                android:id="@+id/food_label"
                style="@style/BoldTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/view_margin_horizontal"
                android:layout_marginTop="@dimen/view_margin_vertical_double"
                android:layout_marginEnd="@dimen/view_margin_horizontal"
                android:maxLines="2"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/food_label" />

            <TextView
                android:id="@+id/calorie"
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="8dp"
                android:text="@string/calorie"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/recipe_image_view"
                app:layout_constraintTop_toBottomOf="@+id/food_label" />

            <TextView
                android:id="@+id/protein"
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="8dp"
                android:text="@string/protein"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/recipe_image_view"
                app:layout_constraintTop_toBottomOf="@+id/calorie" />

            <TextView
                android:id="@+id/carbohydrate"
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_marginStart="49dp"
                android:layout_marginEnd="8dp"
                android:text="@string/carbohydrate"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.028"
                app:layout_constraintStart_toEndOf="@+id/divider"
                app:layout_constraintTop_toBottomOf="@+id/fat" />

            <TextView
                android:id="@+id/fat"
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="8dp"
                android:text="@string/fat"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/recipe_image_view"
                app:layout_constraintTop_toBottomOf="@+id/protein" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>